[gd_scene load_steps=2 format=3 uid="uid://mobilecontrols"]

[ext_resource type="Script" uid="uid://mobilecontrolsscript" path="res://scripts/mobile_controls.gd" id="1_script"]

[node name="MobileControls" type="CanvasLayer"]
script = ExtResource("1_script")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftControls" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = -50.0
grow_vertical = 0
theme_override_constants/separation = 20

[node name="Forward" type="Button" parent="Control/LeftControls"]
layout_mode = 2
size_flags_vertical = 3
text = "FORWARD"

[node name="Backward" type="Button" parent="Control/LeftControls"]
layout_mode = 2
size_flags_vertical = 3
text = "BACKWARD"

[node name="RightControls" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -150.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 20

[node name="Left" type="Button" parent="Control/RightControls"]
layout_mode = 2
size_flags_horizontal = 3
text = "LEFT"

[node name="Right" type="Button" parent="Control/RightControls"]
layout_mode = 2
size_flags_horizontal = 3
text = "RIGHT"

[connection signal="button_down" from="Control/LeftControls/Forward" to="." method="_on_forward_button_down"]
[connection signal="button_up" from="Control/LeftControls/Forward" to="." method="_on_forward_button_up"]
[connection signal="button_down" from="Control/LeftControls/Backward" to="." method="_on_backward_button_down"]
[connection signal="button_up" from="Control/LeftControls/Backward" to="." method="_on_backward_button_up"]
[connection signal="button_down" from="Control/RightControls/Left" to="." method="_on_left_button_down"]
[connection signal="button_up" from="Control/RightControls/Left" to="." method="_on_left_button_up"]
[connection signal="button_down" from="Control/RightControls/Right" to="." method="_on_right_button_down"]
[connection signal="button_up" from="Control/RightControls/Right" to="." method="_on_right_button_up"]
